tdf#167642 Restart in safe mode doesn't launch safe mode on macOS

Change-Id: I639a537b3dfaafbd449db18b000fef7bf0e26592
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188313
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>